crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@ansi_port_keyword_prefix_after_comma.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/ansi_port_keyword_prefix_after_comma.v
---
lex: Code
prefix: "o"
replacement: 18..19
in_decl_name: true
expectations:
  AnsiPortItem
