crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@ansi_port_keyword_prefix_at_first_port.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/ansi_port_keyword_prefix_at_first_port.v
---
lex: Code
prefix: "in"
replacement: 15..17
in_decl_name: false
expectations:
  AnsiPortItem
