crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@ansi_port_keyword_prefix_over_decl_name.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/ansi_port_keyword_prefix_over_decl_name.v
---
lex: Code
prefix: "wir"
replacement: 15..18
in_decl_name: true
expectations:
  AnsiPortItem
