crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@ansi_port_list.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/ansi_port_list.v
---
lex: Code
prefix: ""
replacement: 15..16
in_decl_name: true
expectations:
  DeclName
