crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@ansi_port_list_comma_trigger.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/ansi_port_list_comma_trigger.v
---
lex: Code
prefix: ""
replacement: 18..19
in_decl_name: true
expectations:
  DeclName
