crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@ansi_port_list_newline_trigger.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/ansi_port_list_newline_trigger.v
---
lex: Code
prefix: ""
replacement: 15..15
in_decl_name: false
expectations:
  AnsiPortItem
