crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@argument_list_open_paren_trigger.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/argument_list_open_paren_trigger.v
---
lex: Code
prefix: ""
replacement: 20..20
in_decl_name: false
expectations:
  ArgumentExpr
  Keyword(ModuleMember)
