crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@assignment_expression.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/assignment_expression.v
---
lex: Code
prefix: ""
replacement: 28..28
in_decl_name: false
expectations:
  Expression
