crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@block_decl_keyword_prefix_before_statement.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/block_decl_keyword_prefix_before_statement.v
---
lex: Code
prefix: "re"
replacement: 26..28
in_decl_name: false
expectations:
  Keyword(BlockItem)
