crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@block_decl_start_before_statement.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/block_decl_start_before_statement.v
---
lex: Code
prefix: ""
replacement: 26..26
in_decl_name: false
expectations:
  Keyword(BlockItem)
  Expression
